# Actix-Example

./: .dockerignore  .gitignore  Cargo.toml  Readme.md  build.sh
docker/: Dockerfile  docker-compose.yml
docker/data/mongo-init/: import.sh
macros/: Cargo.toml
macros/src/: lib.rs  validator.rs
petstore-api/: Cargo.toml
scripts/: api.sh  docker.sh  export_data.sh
vehicle-api/: Cargo.toml
vehicle-api/src/: error.rs  main.rs
vehicle-api/src/authentication/: identity.rs  middleware.rs  mod.rs
vehicle-api/src/controllers/: booking.rs  mod.rs  vehicle.rs
vehicle-api/src/models/: booking.rs  mod.rs  vehicle.rs
vehicle-api/src/routes/: booking.rs  mod.rs  vehicle.rs
vehicle-api/src/services/mongodb/: mod.rs  query_builder.rs
vehicle-api/src/services/mongodb/booking/: has_overlapping_bookings.rs  mod.rs
vehicle-api/src/util/: mod.rs  serde_helpers.rs  util_serde.rs
vehicle-api/src/validator/: booking.rs  json.rs  mod.rs  vehicle.rs
