[package]
name = "vehicle-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
actix-web-grants = "4.1.2"
actix-web-lab = "0.24.2"
bson = { version = "2.13.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.39", features = ["serde"] }
derive_more = "2.0.1"
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3"
macros = { path = "../macros" }
mongodb = "3.2.1"
sentry = { version = "0.37", features = ["backtrace", "panic"] }
sentry-actix = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
